gcc/testsuite/rust/rustc/ui/destructuring-assignment/non-exhaustive-destructure_dg.rs
fn main() {
    None = Some(3);
// { dg-error ".E0005." "" { target *-*-* } .-1 }
}

